--- a/index.html
+++ b/index.html
@@ -6,27 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>2UML</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/Inter.css?h=a8c772e87c559937f07c1c83943f79e6">
-    <link rel="stylesheet" href="/assets/css/JetBrains%20Mono.css?h=54642c304b5fdd7a4ba8eb5ae175f6c2">
-    <link rel="stylesheet" href="/assets/css/custom.css?h=0f59d86c3b9e21d6a3a23473b94225cd">
-    <link rel="stylesheet" href="/assets/css/logo.css?h=4949151e96dc4881a4cc9f97db6f2e5e">
-    <link rel="stylesheet" href="/assets/css/styles.css?h=2fe920eb5098768877347a19fc6416d0">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=f29e41bc813ae2983a913053d06f07c9">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=d968c7c7deb5e4d62a0af70b6cc06cd5">
+    <link rel="stylesheet" href="assets/css/custom.css?h=e9bec95cd37cd2c649b533cacd9dd555">
+    <link rel="stylesheet" href="assets/css/logo.css?h=4949151e96dc4881a4cc9f97db6f2e5e">
+    <link rel="stylesheet" href="assets/css/styles.css?h=7233c2c9ba7a577c939e438a91dcb281">
 </head>
 
 <body>
     <!-- Start: Sidebar With Icons -->
-    <div class="bg-body shadow d-flex flex-column flex-shrink-0 position-fixed top-0 bottom-0" style="margin: 20px;border: 2px solid black;">
+    <div class="bg-body shadow d-flex flex-column flex-shrink-0 position-fixed top-0 bottom-0" style="margin: 20px;border: 2px solid black;z-index: 9999;">
         <ul class="nav nav-pills flex-column text-center nav-flush mb-auto">
-            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0 custom" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="jump" style="font-size: 32px;color: white;">
-                        <path d="M10.7071 2.29289C10.3166 1.90237 9.68342 1.90237 9.29289 2.29289L2.29289 9.29289C1.90237 9.68342 1.90237 10.3166 2.29289 10.7071C2.68342 11.0976 3.31658 11.0976 3.70711 10.7071L4 10.4142V17C4 17.5523 4.44772 18 5 18H7C7.55228 18 8 17.5523 8 17V15C8 14.4477 8.44772 14 9 14H11C11.5523 14 12 14.4477 12 15V17C12 17.5523 12.4477 18 13 18H15C15.5523 18 16 17.5523 16 17V10.4142L16.2929 10.7071C16.6834 11.0976 17.3166 11.0976 17.7071 10.7071C18.0976 10.3166 18.0976 9.68342 17.7071 9.29289L10.7071 2.29289Z" fill="currentColor"></path>
-                    </svg></a></li>
-            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github jump" style="font-size: 32px;color: black;">
+            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0 custom" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github zoom" style="font-size: 32px;color: white;">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8"></path>
                     </svg></a></li>
-            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="jump" style="font-size: 32px;color: black;">
+            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="zoom" style="font-size: 32px;color: black;">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M4 2C4.55228 2 5 2.44772 5 3V5.10125C6.27009 3.80489 8.04052 3 10 3C13.0494 3 15.641 4.94932 16.6014 7.66675C16.7855 8.18747 16.5126 8.75879 15.9918 8.94284C15.4711 9.12689 14.8998 8.85396 14.7157 8.33325C14.0289 6.38991 12.1755 5 10 5C8.36507 5 6.91204 5.78502 5.99935 7H9C9.55228 7 10 7.44772 10 8C10 8.55228 9.55228 9 9 9H4C3.44772 9 3 8.55228 3 8V3C3 2.44772 3.44772 2 4 2ZM4.00817 11.0572C4.52888 10.8731 5.1002 11.146 5.28425 11.6668C5.97112 13.6101 7.82453 15 10 15C11.6349 15 13.088 14.215 14.0006 13L11 13C10.4477 13 10 12.5523 10 12C10 11.4477 10.4477 11 11 11H16C16.2652 11 16.5196 11.1054 16.7071 11.2929C16.8946 11.4804 17 11.7348 17 12V17C17 17.5523 16.5523 18 16 18C15.4477 18 15 17.5523 15 17V14.8987C13.7299 16.1951 11.9595 17 10 17C6.95059 17 4.35905 15.0507 3.39857 12.3332C3.21452 11.8125 3.48745 11.2412 4.00817 11.0572Z" fill="currentColor"></path>
                     </svg></a></li>
-            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="jump" style="font-size: 32px;color: black;">
+            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="zoom" style="font-size: 32px;color: black;">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M3 4C3 3.44772 3.44772 3 4 3H7C7.55228 3 8 3.44772 8 4V7C8 7.55228 7.55228 8 7 8H4C3.44772 8 3 7.55228 3 7V4ZM5 6V5H6V6H5Z" fill="currentColor"></path>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M3 13C3 12.4477 3.44772 12 4 12H7C7.55228 12 8 12.4477 8 13V16C8 16.5523 7.55228 17 7 17H4C3.44772 17 3 16.5523 3 16V13ZM5 15V14H6V15H5Z" fill="currentColor"></path>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M13 3C12.4477 3 12 3.44772 12 4V7C12 7.55228 12.4477 8 13 8H16C16.5523 8 17 7.55228 17 7V4C17 3.44772 16.5523 3 16 3H13ZM14 5V6H15V5H14Z" fill="currentColor"></path>
@@ -38,13 +35,12 @@
                         <path d="M17 13C17 13.5523 16.5523 14 16 14H14C13.4477 14 13 13.5523 13 13C13 12.4477 13.4477 12 14 12H16C16.5523 12 17 12.4477 17 13Z" fill="currentColor"></path>
                         <path d="M16 17C16.5523 17 17 16.5523 17 16C17 15.4477 16.5523 15 16 15H13C12.4477 15 12 15.4477 12 16C12 16.5523 12.4477 17 13 17H16Z" fill="currentColor"></path>
                     </svg></a></li>
-            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="jump" style="font-size: 32px;color: black;">
+            <li class="nav-item"><a class="nav-link py-3 border-bottom rounded-0" href="#" style="padding: 20px!important;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="zoom" style="font-size: 32px;color: black;">
 
                         <path d="M15 8C16.6569 8 18 6.65685 18 5C18 3.34315 16.6569 2 15 2C13.3431 2 12 3.34315 12 5C12 5.12548 12.0077 5.24917 12.0227 5.37061L7.08259 7.84064C6.54303 7.32015 5.8089 7 5 7C3.34315 7 2 8.34315 2 10C2 11.6569 3.34315 13 5 13C5.80892 13 6.54306 12.6798 7.08263 12.1593L12.0227 14.6293C12.0077 14.7508 12 14.8745 12 15C12 16.6569 13.3431 18 15 18C16.6569 18 18 16.6569 18 15C18 13.3431 16.6569 12 15 12C14.1911 12 13.457 12.3201 12.9174 12.8406L7.97733 10.3706C7.9923 10.2492 8 10.1255 8 10C8 9.8745 7.99229 9.7508 7.97733 9.62934L12.9174 7.15932C13.4569 7.67984 14.1911 8 15 8Z" fill="currentColor"></path>
                     </svg></a></li>
-            <li class="nav-item"></li>
         </ul>
-        <div class="dropdown p-3 border-top" style="padding: 12px!important;padding-top: 20px!important;padding-bottom: 20px!important;"><a class="dropdown-toggle link-body-emphasis d-flex align-items-center text-decoration-none jump" aria-expanded="false" data-bs-toggle="dropdown" role="button"><img class="rounded-circle" alt="" width="32" height="32" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="object-fit: cover;"></a>
+        <div class="dropdown p-3 border-top" style="padding: 12px!important;padding-top: 20px!important;padding-bottom: 20px!important;"><a class="dropdown-toggle link-body-emphasis d-flex align-items-center text-decoration-none zoom" aria-expanded="false" data-bs-toggle="dropdown" role="button"><img class="rounded-circle" alt="" width="32" height="32" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="object-fit: cover;"></a>
             <div class="dropdown-menu shadow text-small" data-popper-placement="top-start"><a class="dropdown-item" href="#">Profile</a><a class="dropdown-item" href="#">Settings</a>
                 <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Sign out</a>
             </div>
@@ -63,10 +59,10 @@
         <!-- Start: 2 Rows 1+2 Columns -->
         <div class="container">
             <div class="row" style="margin-bottom: 24px;">
-                <div class="col-md-6 d-flex justify-content-center align-items-center"><textarea class="bg-dark" id="message-2" name="description" placeholder="@startuml Bob -> Alice : hello @enduml" style="width: 100%;color: white;font-family: 'JetBrains Mono', monospace;border-radius: 0;border-width: 2px;border-color: black;min-height: 384px;padding: 20px;" wrap="soft"></textarea></div>
+                <div class="col-md-6 d-flex justify-content-center align-items-center"><textarea class="bg-black" id="message-2" name="description" style="width: 100%;color: green;font-family: 'JetBrains Mono', monospace;border-radius: 0;border-width: 2px;border-color: black;min-height: 384px;padding: 20px;" wrap="soft"></textarea></div>
                 <div class="col d-flex flex-row justify-content-center align-items-end" style="border: 2px solid black;border-radius: 0;padding: 20px;margin: 0 12px;background: #f5f5f5;">
                     <div class="d-flex justify-content-center align-items-center" style="width: 100%;height: 100%;background: linear-gradient(-30deg, #0e0725 0%, #5c03bc 33%, #e536ab 66%, #f4e5f0 100%);border: 2px solid black;padding: 20px;">
-                        <div style="width: 100%;height: 100%;background: url(&quot;/assets/img/SoWkIImgAStDuNBAJrBGjLDmpCbCJbMmKiX8pSd9vt98pKi1IW80.png?h=2bfc053a57790c4aae57f49867b651b2&quot;) center / contain no-repeat;"></div>
+                        <div style="width: 100%;height: 100%;background: url(&quot;assets/img/SoWkIImgAStDuNBAJrBGjLDmpCbCJbMmKiX8pSd9vt98pKi1IW80.png?h=2bfc053a57790c4aae57f49867b651b2&quot;) center / contain no-repeat;"></div>
                     </div><button class="btn btn-primary d-flex justify-content-center align-items-center custom zoom" type="button" style="margin-left: 20px;border-width: 0px;border-radius: 100%;padding: 12px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 32px;">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M2 9.5C2 11.433 3.567 13 5.5 13H9V15.5858L7.70711 14.2929C7.31658 13.9024 6.68342 13.9024 6.29289 14.2929C5.90237 14.6834 5.90237 15.3166 6.29289 15.7071L9.29289 18.7071C9.68342 19.0976 10.3166 19.0976 10.7071 18.7071L13.7071 15.7071C14.0976 15.3166 14.0976 14.6834 13.7071 14.2929C13.3166 13.9024 12.6834 13.9024 12.2929 14.2929L11 15.5858V13H13.5C15.9853 13 18 10.9853 18 8.5C18 6.01472 15.9853 4 13.5 4C13.2912 4 13.0857 4.01422 12.8845 4.04175C12.4551 2.29538 10.8788 1 9 1C6.79086 1 5 2.79086 5 5C5 5.35223 5.04553 5.69382 5.13102 6.01922C3.37146 6.20358 2 7.69163 2 9.5ZM11 13H9V8C9 7.44772 9.44772 7 10 7C10.5523 7 11 7.44772 11 8V13Z" fill="currentColor"></path>
                         </svg></button>
@@ -77,7 +73,7 @@
                     <div class="card mb-5" style="border-width: 0px;">
                         <div class="card-body p-sm-5" style="background: #f5f5f5;border-radius: 0;border: 2px solid black;padding: 20px!important;">
                             <form method="post">
-                                <div class="d-flex justify-content-center align-items-end mb-3" style="margin: 0!important;padding: 0;"><textarea class="form-control" id="message-1" name="description" placeholder="Please provide comprehensive specifications regarding the design of your system. This should encompass essential elements such as structure, relationships, constraints, user roles, and any other pertinent factors that require consideration." style="font-family: Inter, sans-serif;width: 100%!important;min-height: 64px;border-radius: 0;border: 2px solid black;padding: 20px;"></textarea><button class="btn btn-primary d-flex justify-content-center align-items-center custom zoom" type="button" style="margin-left: 20px;border-width: 0px;border-radius: 100%;padding: 12px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 32px;">
+                                <div class="d-flex justify-content-center align-items-end mb-3" style="margin: 0!important;padding: 0;"><textarea class="form-control" id="message-1" name="description" style="font-family: Inter, sans-serif;width: 100%!important;min-height: 64px;border-radius: 0;border: 2px solid black;padding: 20px;color: gray!important;" wrap="soft"></textarea><button class="btn btn-primary d-flex justify-content-center align-items-center custom zoom" type="button" style="margin-left: 20px;border-width: 0px;border-radius: 100%;padding: 12px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 32px;">
 
                                             <path d="M13.5858 3.58579C14.3668 2.80474 15.6332 2.80474 16.4142 3.58579C17.1953 4.36683 17.1953 5.63316 16.4142 6.41421L15.6213 7.20711L12.7929 4.37868L13.5858 3.58579Z" fill="currentColor"></path>
                                             <path d="M11.3787 5.79289L3 14.1716V17H5.82842L14.2071 8.62132L11.3787 5.79289Z" fill="currentColor"></path>
