--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>2UML</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=f29e41bc813ae2983a913053d06f07c9">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=d968c7c7deb5e4d62a0af70b6cc06cd5">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=f6a25171795cb3bdb447df92dba7be98">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=d74b345069b3bf183e5da43bf099b0a5">
     <link rel="stylesheet" href="assets/css/custom.css?h=e9bec95cd37cd2c649b533cacd9dd555">
     <link rel="stylesheet" href="assets/css/logo.css?h=4949151e96dc4881a4cc9f97db6f2e5e">
     <link rel="stylesheet" href="assets/css/styles.css?h=7233c2c9ba7a577c939e438a91dcb281">
@@ -59,7 +59,7 @@
         <!-- Start: 2 Rows 1+2 Columns -->
         <div class="container">
             <div class="row" style="margin-bottom: 24px;">
-                <div class="col-md-6 d-flex justify-content-center align-items-center"><textarea class="bg-black" id="message-2" name="description" style="width: 100%;color: green;font-family: 'JetBrains Mono', monospace;border-radius: 0;border-width: 2px;border-color: black;min-height: 384px;padding: 20px;" wrap="soft"></textarea></div>
+                <div class="col-md-6 d-flex justify-content-center align-items-center"><textarea class="bg-black" id="message-2" name="description" style="width: 100%;color: #00ff00;font-family: 'JetBrains Mono', monospace;border-radius: 0;border-width: 2px;border-color: black;min-height: 384px;padding: 20px;" wrap="soft"></textarea></div>
                 <div class="col d-flex flex-row justify-content-center align-items-end" style="border: 2px solid black;border-radius: 0;padding: 20px;margin: 0 12px;background: #f5f5f5;">
                     <div class="d-flex justify-content-center align-items-center" style="width: 100%;height: 100%;background: linear-gradient(-30deg, #0e0725 0%, #5c03bc 33%, #e536ab 66%, #f4e5f0 100%);border: 2px solid black;padding: 20px;">
                         <div style="width: 100%;height: 100%;background: url(&quot;assets/img/SoWkIImgAStDuNBAJrBGjLDmpCbCJbMmKiX8pSd9vt98pKi1IW80.png?h=2bfc053a57790c4aae57f49867b651b2&quot;) center / contain no-repeat;"></div>
