--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>2UML</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=7e76f9a69dffcb5c477d31fb0102f89b">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=75e5d169a9535b8ba0505b1836567812">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=b3c87096f7f15a7932cb1c48c2611127">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=7419f447298c41067de8a1ce55872a43">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
     <link rel="stylesheet" href="assets/css/logo.css?h=4949151e96dc4881a4cc9f97db6f2e5e">
@@ -69,7 +69,7 @@
         <!-- Start: 2 Rows 1+2 Columns -->
         <div class="container">
             <div class="row">
-                <div class="col-md-6 d-flex justify-content-center align-items-center" style="margin-bottom: 24px;"><textarea class="bg-dark" id="message-2" name="description" style="width: 100%;color: #00ff00;font-family: 'JetBrains Mono', monospace;border-radius: 0;border-width: 2px;border-color: black;min-height: 384px;padding: 20px;" wrap="soft">@startuml Bob -&gt; Alice : hello @enduml</textarea></div>
+                <div class="col-md-6 d-flex justify-content-center align-items-center" style="margin-bottom: 24px;"><textarea class="bg-black" id="message-2" name="description" style="width: 100%;color: #00ff00;font-family: 'JetBrains Mono', monospace;border-radius: 0;border-width: 2px;border-color: black;min-height: 384px;padding: 20px;" wrap="soft">@startuml Bob -&gt; Alice : hello @enduml</textarea></div>
                 <div class="col d-flex flex-row justify-content-center align-items-end" style="border-radius: 0;padding: 20px;margin: 0 12px;background: #f5f5f5;margin-bottom: 24px;min-height: 256px;border: 2px solid black ;">
                     <div class="d-flex justify-content-center align-items-center" style="width: 100%;background: linear-gradient(-30deg, #0e0725 0%, #5c03bc 33%, #e536ab 66%, #f4e5f0 100%);padding: 20px;height: 100%;">
                         <div style="width: 100%;height: 100%;background: url(&quot;assets/img/SoWkIImgAStDuNBAJrBGjLDmpCbCJbMmKiX8pSd9vt98pKi1IW80.png?h=2bfc053a57790c4aae57f49867b651b2&quot;) center / contain no-repeat;"></div>
