--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>2UML</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=b3c87096f7f15a7932cb1c48c2611127">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=7419f447298c41067de8a1ce55872a43">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=68fbb54fa5db5635713b0609efc6d99c">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=36dafc2d74cc03361bce0ddb43ae010d">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
     <link rel="stylesheet" href="assets/css/logo.css?h=4949151e96dc4881a4cc9f97db6f2e5e">
@@ -97,7 +97,7 @@
         </div><!-- End: 2 Rows 1+2 Columns -->
     </section><!-- Start: Footer Dark -->
     <footer class="text-center bg-dark custom" style="border-top: 2px solid black ;">
-        <div class="container text-white py-4 py-lg-5">
+        <div class="container text-white py-4 py-lg-5" style="padding: 20px;">
             <p class="text-muted mb-0" style="color: white!important;font-family: 'JetBrains Mono', monospace;">MIT License Copyright (c) Roberto Vicario 2024</p>
         </div>
     </footer><!-- End: Footer Dark -->
