--- a/index.html
+++ b/index.html
@@ -125,18 +125,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex justify-content-center align-items-center" style="margin-bottom: 24px;">
-                    <textarea class="bg-black" id="message-2" name="description"
-                        style="width: 100%;color: #00ff00;font-family: 'JetBrains Mono', monospace;border-radius: 0;border-width: 2px;border-color: black;min-height: 384px;padding: 20px;"
-                        wrap="soft">@startuml 
-Bob -> Alice : hello 
-@enduml
-                    </textarea>
+                    <textarea class="bg-black" id="message-2" name="description" style="width: 100%;color: #00ff00;font-family: 'JetBrains Mono', monospace;border-radius: 0;border-width: 2px;border-color: black;min-height: 384px;padding: 20px;" wrap="soft">@startuml
+Bob -> Alice : hello
+@enduml</textarea>
                 </div>
                 <div class="col d-flex flex-row justify-content-center align-items-end"
                     style="border-radius: 0;padding: 20px;margin: 0 12px;background: #f5f5f5;margin-bottom: 24px;min-height: 256px;border: 2px solid black ;">
                     <div class="d-flex justify-content-center align-items-center"
                         style="width: 100%;background: linear-gradient(-30deg, #0e0725 0%, #5c03bc 33%, #e536ab 66%, #f4e5f0 100%);padding: 20px;height: 100%;">
-                        <div id="img-diagram" style="width: 100%;height: 100%;"></div>
+                        <div id="img-diagram" style="width: 100%;height: 100%;background: url(&quot;assets/img/SoWkIImgAStDuNBAJrBGjLDmpCbCJbMmKiX8pSd9vt98pKi1IW80.png?h=2bfc053a57790c4aae57f49867b651b2&quot;) center / contain no-repeat;"></div>
                     </div><button class="btn btn-primary d-flex justify-content-center align-items-center custom zoom"
                         type="button"
                         style="margin-left: 20px;border-width: 0px;border-radius: 100%;padding: 12px;"><svg
@@ -182,62 +179,12 @@ Bob -> Alice : hello
     <footer class="text-center bg-dark custom" style="border-top: 2px solid black ;">
         <div class="container text-white py-4 py-lg-5" style="padding: 20px;">
             <p class="text-muted mb-0" style="color: white!important;font-family: 'JetBrains Mono', monospace;">MIT
-                License Copyright (c) Roberto Vicario 2024</p>
+                License Copyright (c) 2UML 2024</p>
         </div>
     </footer><!-- End: Footer Dark -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="plantuml/plantuml.js"></script>
-    <script>
-        // load parameters
-        const pathname = window.location.pathname.match(/^.*[\/]/)[0] // until the trailing slash, do not include the filename
-        const hashParams = window.location.hash.substr(1).split('&').reduce(function (res, item) {
-            var parts = item.split('=')
-            res[parts[0]] = parts[1]
-            return res
-        }, {})
-        const editor = document.getElementById('message-2');
-
-
-        function _render() {
-            plantuml.renderPng(editor.value).then((blob) => {
-
-                document.getElementById('img-diagram').style.background = "url(" + window.URL.createObjectURL(blob) + ") center / contain no-repeat";
-            }).catch((error) => {
-                console.log(error)
-            })
-        }
-
-        function debounce(func, delay = 400) {
-            let timerId;
-            return (...args) => {
-                clearTimeout(timerId);
-                timerId = setTimeout(() => {
-                    func.apply(this, args);
-                }, delay);
-            };
-        }
-
-        const debouncedRender = debounce(() => _render())
-
-
-        const jarPath = "/app" + pathname + "plantuml"
-        plantuml.initialize(jarPath).then(() => {
-            debouncedRender()
-            document.addEventListener('DOMContentLoaded', (event) => {
-                console.log("This stuff is rendering")
-                debouncedRender()
-            });
-
-            editor.addEventListener('input', (event) => {
-                debouncedRender()
-            })
-        })
-
-
-
-
-
-    </script>
+    <script src="assets/src/plantuml.js"></script>
+    <script src="assets/src/plantuml_core.js"></script>
 </body>
 
 </html>
