--- a/index.html
+++ b/index.html
@@ -142,12 +142,14 @@
             <p class="text-muted mb-0" style="font-family: 'JetBrains Mono', monospace;color: white!important;">MIT License Copyright (c) 2UML 2024</p>
         </div>
     </footer><!-- End: Footer Dark --><script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/code_mirror.js?h=0ab73aa3f16f8460ac9bfe7eb3fd96d0"></script>
     <script src="assets/js/download-uml.js?h=6b42d5a2b3705f636cfd803d1a7b8e7e"></script>
     <script src="assets/js/theme.js?h=e5d617e6d0ada1416e9cf499e3dc5d70"></script>
+    <script src="assets/src/plantuml.js"></script>
+    <script src="assets/src/plantuml_core.js"></script>
 </body>
 
 </html>
