--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
             "url": "https://robertovicario.github.io/2UML"
         }
     </script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png?h=96a5618632ab11689a39dccf0a39f25f">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png?h=96a5618632ab11689a39dccf0a39f25f">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png?h=96a5618632ab11689a39dccf0a39f25f" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png?h=96a5618632ab11689a39dccf0a39f25f">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png?h=96a5618632ab11689a39dccf0a39f25f" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png?h=96a5618632ab11689a39dccf0a39f25f">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-chrome-192x192.png?h=96a5618632ab11689a39dccf0a39f25f">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=96a5618632ab11689a39dccf0a39f25f">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png?h=765ebb99725c311d6b70f5d1d4dc48db">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png?h=765ebb99725c311d6b70f5d1d4dc48db">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png?h=765ebb99725c311d6b70f5d1d4dc48db" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png?h=765ebb99725c311d6b70f5d1d4dc48db">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png?h=765ebb99725c311d6b70f5d1d4dc48db" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png?h=765ebb99725c311d6b70f5d1d4dc48db">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-chrome-192x192.png?h=765ebb99725c311d6b70f5d1d4dc48db">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=765ebb99725c311d6b70f5d1d4dc48db">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="manifest" href="manifest.json?h=236835c50364c5aa18c857fcb8eb3887" crossorigin="use-credentials">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=0cb74a78737bbb051bda6c3a089f5e5b">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=14e13176471d44c15df2b5ee189233a3">
+    <link rel="manifest" href="manifest.json?h=f675c9e6979c44a498f7de97cd4fad02" crossorigin="use-credentials">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=25c32e1ec8ab4ecadf988a1a82c28d5d">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=48f0a1d5384be209fe3cf2deb099cb9b">
     <link rel="stylesheet" href="assets/css/code_mirror.css?h=c79f051ba28e18f7c0c05abd75912cad">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
@@ -112,7 +112,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card mb-5" style="border-width: 0px;">
+                    <div class="card mb-5 glass" style="border-width: 0px;">
                         <div class="card-body p-sm-5" style="padding: 20px!important;border-radius: 20px;border: 2px solid var(--bs-body-color);">
                             <form method="post">
                                 <div class="d-flex justify-content-center align-items-end mb-3" style="margin: 0!important;padding: 0;">
@@ -142,14 +142,12 @@
             <p class="text-muted mb-0" style="font-family: 'JetBrains Mono', monospace;color: white!important;">MIT License Copyright (c) 2UML 2024</p>
         </div>
     </footer><!-- End: Footer Dark --><script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/code_mirror.js?h=0ab73aa3f16f8460ac9bfe7eb3fd96d0"></script>
     <script src="assets/js/download-uml.js?h=6b42d5a2b3705f636cfd803d1a7b8e7e"></script>
     <script src="assets/js/theme.js?h=e5d617e6d0ada1416e9cf499e3dc5d70"></script>
-    <script src="assets/src/plantuml.js"></script>
-    <script src="assets/src/plantuml_core.js"></script>
 </body>
 
 </html>
