--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=765ebb99725c311d6b70f5d1d4dc48db">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json?h=f675c9e6979c44a498f7de97cd4fad02" crossorigin="use-credentials">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=25c32e1ec8ab4ecadf988a1a82c28d5d">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=48f0a1d5384be209fe3cf2deb099cb9b">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=b3166e33d165aaac0e6b3ebd7ef9cbb1">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=2873fcb56f94eb5aa63635baa8616e3a">
     <link rel="stylesheet" href="assets/css/code_mirror.css?h=c79f051ba28e18f7c0c05abd75912cad">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
@@ -56,16 +56,16 @@
             <div>
                 <div style="width: 100%;background: var(--bs-body-color);height: 2px;margin-bottom: 20px;"></div>
                 <ul class="nav nav-pills flex-column mb-auto">
-                    <li class="nav-item"><a class="nav-link active link-light custom" href="https://github.com/robertovicario/2UML" aria-current="page" style="padding: 20px;border-radius: 0;font-size: 20px;border: 2px solid var(--bs-body-color);" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github me-2 zoom" style="font-size: 32px;margin-right: 12px!important;">
+                    <li class="nav-item"><a class="nav-link active link-light custom" href="https://github.com/robertovicario/2UML" aria-current="page" style="padding: 20px;border-radius: 0;font-size: 20px;border: 2px solid var(--bs-body-color);font-family: Inter, sans-serif;" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github me-2 zoom" style="font-size: 32px;margin-right: 12px!important;">
                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8"></path>
                             </svg> Open Repository</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/" style="padding: 20px;font-size: 20px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-clockwise me-2 zoom" style="font-size: 32px;margin-right: 12px!important;">
+                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-clockwise me-2 zoom" style="font-size: 32px;margin-right: 12px!important;">
                                 <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"></path>
                                 <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"></path>
-                            </svg> Reload</a><a class="nav-link link-body-emphasis" id="btn-theme" style="padding: 20px;font-size: 20px;" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-mask me-2 zoom" style="font-size: 32px;margin-right: 12px!important;">
+                            </svg> Reload</a><a class="nav-link link-body-emphasis" id="btn-theme" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-mask me-2 zoom" style="font-size: 32px;margin-right: 12px!important;">
                                 <path d="M6.225 1.227A7.5 7.5 0 0 1 10.5 8a7.5 7.5 0 0 1-4.275 6.773 7 7 0 1 0 0-13.546zM4.187.966a8 8 0 1 1 7.627 14.069A8 8 0 0 1 4.186.964z"></path>
                             </svg>&nbsp;Switch Theme</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="#" style="padding: 20px;" data-bs-target="#modal-1" data-bs-toggle="modal"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-qr-code me-2 zoom" style="font-size: 32px;margin-right: 12px!important;">
+                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="#" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;" data-bs-target="#modal-1" data-bs-toggle="modal"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-qr-code me-2 zoom" style="font-size: 32px;margin-right: 12px!important;">
                                 <path d="M2 2h2v2H2z"></path>
                                 <path d="M6 0v6H0V0zM5 1H1v4h4zM4 12H2v2h2z"></path>
                                 <path d="M6 10v6H0v-6zm-5 1v4h4v-4zm11-9h2v2h-2z"></path>
@@ -137,7 +137,7 @@
             </div>
         </div><!-- End: 2 Rows 1+2 Columns -->
     </section><!-- Start: Footer Dark -->
-    <footer class="text-center bg-dark custom" style="border-top: 2px solid var(--bs-body-color);">
+    <footer class="text-center bg-dark" style="border-top: 2px solid var(--bs-body-color);">
         <div class="container text-white py-4 py-lg-5" style="padding: 20px;">
             <p class="text-muted mb-0" style="font-family: 'JetBrains Mono', monospace;color: white!important;">MIT License Copyright (c) 2UML 2024</p>
         </div>
