--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     <script src="assets/js/code_mirror.js?h=0ab73aa3f16f8460ac9bfe7eb3fd96d0"></script>
     <script src="assets/js/download-uml.js?h=6b42d5a2b3705f636cfd803d1a7b8e7e"></script>
     <script src="assets/js/theme.js?h=e5d617e6d0ada1416e9cf499e3dc5d70"></script>
+    <script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
     <script src="assets/src/plantuml.js"></script>
     <script src="assets/src/plantuml_core.js"></script>
 </body>
