--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Honk&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
 </style>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.css">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/theme/the-matrix.css">
@@ -145,10 +145,10 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
 <script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
 <script src="assets/src/plantuml.js"></script>
-<script src="assets/src/plantuml_core.js"></script>
+<script src="assets/src/plantuml_core.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/code_mirror.js?h=0ab73aa3f16f8460ac9bfe7eb3fd96d0"></script>
+    <script src="assets/js/code_mirror.js?h=0ab73aa3f16f8460ac9bfe7eb3fd96d0" type="module"></script>
     <script src="assets/js/download-uml.js?h=0ab5500c4f1312ec5e5581be65b8a81e"></script>
     <script src="assets/js/theme.js?h=e5d617e6d0ada1416e9cf499e3dc5d70"></script>
 </body>
