--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png?h=765ebb99725c311d6b70f5d1d4dc48db">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json?h=f675c9e6979c44a498f7de97cd4fad02" crossorigin="use-credentials">
-    <link rel="stylesheet" href="assets/css/Inter.css?h=122d57c62cc97ad2ccf0fb76d5741ace">
-    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=4a1ff3a0fd7945ada5819a191742db88">
+    <link rel="stylesheet" href="assets/css/Inter.css?h=48ca19b27cc4c5a39493dccc6f3bff68">
+    <link rel="stylesheet" href="assets/css/JetBrains%20Mono.css?h=b92e8b2df3ab3edc78f212d4b548c66b">
     <link rel="stylesheet" href="assets/css/code_mirror.css?h=c79f051ba28e18f7c0c05abd75912cad">
     <link rel="stylesheet" href="assets/css/custom.css?h=dce7359e7e5d4103ceb334d8d3e4d3b3">
     <link rel="stylesheet" href="assets/css/Footer-Dark-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
@@ -144,11 +144,11 @@
     </footer><!-- End: Footer Dark --><script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
 <script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
-<script src="assets/src/plantuml.js"></script>
-<script src="assets/src/plantuml_core.js" type="module"></script>
+<script src="assets/src/compiler/plantuml.js"></script>
+<script src="assets/src/compiler/plantuml_core.js" type="module"></script>
+<script src="assets/src/compiler/code_mirror.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/code_mirror.js?h=0ab73aa3f16f8460ac9bfe7eb3fd96d0" type="module"></script>
     <script src="assets/js/download-uml.js?h=0ab5500c4f1312ec5e5581be65b8a81e"></script>
     <script src="assets/js/theme.js?h=e5d617e6d0ada1416e9cf499e3dc5d70"></script>
 </body>
